--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,14 +49,14 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.17",
+    "@angular-devkit/build-angular": "^18.0.4",
     "@angular-devkit/core": "^12.2.17",
-    "@angular-eslint/builder": "12.7.0",
+    "@angular-eslint/builder": "^18.0.1",
     "@angular-eslint/eslint-plugin": "12.7.0",
     "@angular-eslint/eslint-plugin-template": "12.7.0",
-    "@angular-eslint/schematics": "12.7.0",
+    "@angular-eslint/schematics": "^18.0.1",
     "@angular-eslint/template-parser": "12.7.0",
-    "@angular/cli": "~12.2.17",
+    "@angular/cli": "^18.0.4",
     "@angular/compiler-cli": "~12.2.16",
     "@angular/language-service": "~12.2.16",
     "@types/jasmine": "~3.6.0",
@@ -64,7 +64,7 @@
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.28.2",
     "@typescript-eslint/parser": "4.28.2",
-    "codelyzer": "^6.0.0",
+    "codelyzer": "^6.0.2",
     "eslint": "^7.26.0",
     "jasmine-core": "~4.1.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -73,7 +73,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.7.0",
-    "protractor": "~7.0.0",
+    "protractor": "^7.0.0",
     "ts-node": "~7.0.0",
     "typescript": "~4.3.5"
   }
